<resources>
    <string name="app_name" translatable="false">R+</string>
    <string name="action_settings">Settings</string>
    <string name="preference_category_title_account">ACCOUNT</string>
    <string name="pref_title_log_out">Log out</string>
    <string name="preference_category_title_about">ABOUT</string>
    <string name="pref_title_about_the_developer">About the developer</string>
    <string name="pref_title_see_the_source">This app is open-source</string>
    <string name="pref_summary_see_the_source">Fork it!</string>
    <string name="pref_summary_about_the_author" translatable="false">Jorge Antonio Diaz-Benito
        Soriano</string>
    <string name="pref_key_about_the_author" translatable="false">key_about_the_author</string>
    <string name="pref_key_include_hashtags" translatable="false">key_include_hashtags</string>
    <string name="pref_key_see_the_source" translatable="false">key_see_the_source</string>
    <string name="pref_key_log_out" translatable="false">key_log_out</string>
    <string name="about_the_author_link" translatable="false">https://www.linkedin
        .com/in/jorgediazbenitosoriano</string>
    <string name="author_linkedin_id" translatable="false">169653526</string>
    <string name="linkedin_intent_pattern" formatted="false" translatable="false">linkedin://profile/%s</string>
    <string name="github_repository_url" translatable="false">https://github.com/Stoyicker/Twizer</string>
    <string name="fragment_tag_twitter_login" translatable="false">fragment_tag_twitter_login</string>
    <string name="error_msg_login">Could not login.</string>
    <string name="confirm_log_out">Log out?</string>
    <string name="error">Error</string>
    <string name="default_tweet_id" translatable="false">602884483973517314</string>
    <string name="twitter_api_endpoint" translatable="false">https://api.twitter.com/1.1</string>
    <string name="pref_title_include_hashtags">Include hashtags</string>
    <string name="preference_category_title_trends">TRENDS</string>
    <string name="pref_key_last_tweet_id">key_last_tweet_id</string>
    <string name="special_hashtag_exclusion_key" translatable="false">hashtag</string>
    <string name="trend_location_id_world">1</string>
    <string name="tweet_search_result_type_mixed" translatable="false">mixed</string>
    <string name="location_template" formatted="false" translatable="false">%s,%s</string>
    <string name="preference_category_title_search">SEARCH</string>
    <string name="pref_key_search_distance_unit">key_search_distance_unit</string>
    <string name="pref_key_search_radius">key_search_radius</string>
    <string name="pref_title_search_distance_unit">Distance unit</string>
    <string name="search_distance_unit_km">Kilometers</string>
    <string name="search_distance_unit_mi">Miles</string>
    <string name="pref_title_search_radius">Distance</string>
    <string name="pref_key_search_type_nearby">key_search_type_nearby</string>
    <string name="pref_title_search_type_nearby">Near me only</string>
    <string name="discrete_slider_formatter_kilometers" formatted="false" translatable="false">%skm.</string>
    <string name="discrete_slider_formatter_miles" formatted="false" translatable="false">%smi.</string>
    <string name="default_search_distance_unit_value" translatable="false">1</string>
    <string name="search_distance_unit_mi_value" translatable="false">0</string>
    <string name="search_distance_unit_km_value" translatable="false">1</string>
    <string name="default_max_tweet_id" translatable="false">0</string>
    <string name="pref_key_max_tweet_id" translatable="false">key_max_tweet_id
    </string>
    <string name="pref_key_last_search_text" translatable="false">key_last_search_text</string>
    <string name="default_last_search_text" translatable="false"/>
    <string name="database_name" translatable="false">twizer.db</string>
    <string name="error_database_operation_on_main_thread" translatable="false">Attempted to perform a database operation on the main thread!</string>
</resources>
